--- a/css/jkstyle.css
+++ b/css/jkstyle.css
@@ -2,7 +2,7 @@
 .navbar {
     background-color: #ffb250;
     font-family: Eczar, serif;
-    font-size: 130%;
+    font-size: 120%;
     padding: 15px;
     color: #222222
 }
@@ -12,7 +12,7 @@
 /* page intro & quotes */
 .intro {
     background-color: #222222;
-    padding-bottom: 30px;
+    padding: 30px;
     text-align: center;
 }
 .topper {
@@ -31,12 +31,12 @@
 /* sections */
 .domain {
     background-color: #00c2c7;
-    padding: 20px 30px 10px 30px;
+    padding: 15px 30px 5px 30px;
     text-align: center;
+    font-size: 90%
 }
 .icon {
-    width: 80px; 
-    padding: 5px;
+    width: 60px; 
 }
 /* mainbody & body */
 .main {
@@ -53,10 +53,10 @@
     margin: 5px;
 }
 .photoH {
-    max-width:340px;
+    max-width:300px;
     margin: 5px;
 }
 .vids {
-    margin: 22px; 
+    margin: 10px; 
     border: white solid 3px;
 }
