minor edit for alignment

--- a/css/jkstyle.css
+++ b/css/jkstyle.css
@@ -12,7 +12,7 @@
 /* page intro & quotes */
 .intro {
     background-color: #222222;
-    padding: 10px;
+    padding: 30px 10px;
     text-align: center;
 }
 .topper {
