--- a/css/jkstyle.css
+++ b/css/jkstyle.css
@@ -1,3 +1,6 @@
+body {
+    background-color:#222222;
+}
 /* page's navigation bar */
 .navbar {
     background-color: #ffb250;
@@ -12,7 +15,7 @@
 /* page intro & quotes */
 .intro {
     background-color: #222222;
-    padding: 30px 10px;
+    padding: 30px 10px 0px 10px;
     text-align: center;
 }
 .topper {
@@ -25,8 +28,10 @@
     font-size: 110%;
 }
 .footer {
-    color: #f0f2f5;
-    font-size: 90%;
+    font-family: Montserrat, sans-serif; 
+    color: lightgray;
+    padding-top: 10px;
+    font-size: 80%;
 }
 /* sections */
 .domain {
