--- a/css/jkstyle.css
+++ b/css/jkstyle.css
@@ -9,13 +9,17 @@ body {
     padding: 15px;
     color: #222222
 }
+.menu {
+    border-radius: 20px;
+    background-color: #00c2c7;
+}
 #jklogo {
     max-width: 120px;
 }
 /* page intro & quotes */
 .intro {
     background-color: #222222;
-    padding: 30px 10px 0px 10px;
+    padding: 30px 10px 10px 10px;
     text-align: center;
 }
 .topper {
@@ -41,7 +45,7 @@ body {
     font-size: 90%
 }
 .icon {
-    width: 60px; 
+    width: 50px; 
 }
 /* mainbody & body */
 .main {
