--- a/css/jkstyle.css
+++ b/css/jkstyle.css
@@ -40,12 +40,16 @@ body {
 /* sections */
 .domain {
     background-color: #00c2c7;
-    padding: 15px 30px 5px 30px;
+    padding: 15px 15px 10px 15px;
     text-align: center;
     font-size: 90%
 }
 .icon {
+    width: 50px;
+}
+.icon:hover {
     width: 50px; 
+    opacity: 80%;
 }
 /* mainbody & body */
 .main {
