Fixed max width for nav title segments

--- a/css/jkstyle.css
+++ b/css/jkstyle.css
@@ -68,7 +68,7 @@ body {
     color: #f0f2f5;
     font-family: Montserrat, sans-serif;
     font-size: 90%;
-    padding: 25px;
+    padding: 25px 25px 25px 45px;
     text-align: left;
 }
 .main > .centra {
